--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class ="start screen">
         <h1>Javascript Quiz</h1>
         <p>Answer these 5 questions, wrong answers will take off 15 seconds!</p>
-        <button type="button" class="start"></button>/button>
+        <button type="button" class="start">Start!</button>/button>
     </header>
 <div  id="quiz"></div>
 
